tests/agl/rejections/parse/zero_loop_bound.agl
do[0] pass until true
